@@ -1,6 +1,9 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  [Documentation]
+  - Documented security considerations.
+
   [Tests]
   - Added more author tests
 
